@@ -1,3 +1,9 @@
+  XXX.  [func]		shane
+  	Catch additional signals and perform clean shutdown. Most important
+	is SIGHUP, so BIND 10 will shut down cleanly if the terminal the 
+	program is started in closes.
+	(Trac #642, git ........)
+
   206.  [func]		shane
 	Add the ability to list the running BIND 10 processes using the
 	command channel. To try this, use "Boss show_processes".
